<resources>
    <string name="app_name">MyHomework</string>
    <string name="homework6">Homework6</string>
    <string name="homework7">Homework7</string>
    <string name="Start">START</string>
    <string name="Send">SEND</string>
    <string name="Password">PASSWORD</string>
    <string name="Login">LOGIN</string>
    <string name="Close">CLOSE</string>
    <string name="RecyclerView">Homework10</string>
    <string name="Fragment">Homework13</string>
    <string name="Fragment1">Homework12</string>
    <string name="listСhocolates">listСhocolates</string>
    <string name="Homework17">Homework17</string>
    <string name="no_value">NO VALUES</string>
    <string name="Currency">Currency</string>
    <string name="Homework18">Homework18</string>
    <string name="Homework16">Homework16</string>
    <string name="app1_name">Simple Weather</string>
    <string name="change_city">Change city</string>
    <string name="new_fragment">CLICK FRAGMENT</string>
    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">open_weather_maps_app_id</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>




    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
</resources>
